trying to fix mobile image issue on safari

--- a/dst/style.css
+++ b/dst/style.css
@@ -44,7 +44,7 @@ b {
 
 img {
 	max-width: 100%;
-	height: 100%;
+/*	height: 100%; */
 	object-fit: cover;
 	aspect-ratio: 4/3;
 }
